[tool.poetry]
name = "search-with-ia"
version = "0.1.0"
description = ""
authors = ["Tamby Narivo <tamby.narivo@gmail.com>"]
readme = "README.md"
packages = [{include = "search_with_ia", from = "src"}]

[tool.poetry.dependencies]
python = "~3.12"
autogen-agentchat = ">=0.2,<1.0"
python-dotenv = "^1.0.1"
gradio = "^5.3.0"
tavily-python = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
